--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,7 +35,7 @@
   --sidebar-accent-foreground: oklch(0.325 0 0);
   --sidebar-border: oklch(0.9401 0 0);
   --sidebar-ring: oklch(0.7731 0 0);
-  --font-sans: Inter, ui-sans-serif, sans-serif, system-ui;
+  --font-geist-sans: Geist;
   --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
   --font-mono: Geist Mono, ui-monospace, monospace;
   --radius: 0.5rem;
@@ -94,7 +94,7 @@
   --sidebar-accent-foreground: oklch(0.8074 0.0142 93.0137);
   --sidebar-border: oklch(0.9401 0 0);
   --sidebar-ring: oklch(0.7731 0 0);
-  --font-sans: Inter, ui-sans-serif, sans-serif, system-ui;
+  --font-geist-sans: Geist;
   --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
   --font-mono: Geist Mono, ui-monospace, monospace;
   --radius: 0.5rem;
@@ -152,7 +152,7 @@
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
 
-  --font-sans: var(--font-sans);
+  --font-geist-sans: var(--font-geist-sans);
   --font-mono: var(--font-mono);
   --font-serif: var(--font-serif);
 
